--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -134,7 +134,10 @@ button:disabled {
 }
 
 /* Message Composition Styles */
-
+.typing {
+    padding: 0 0 0 24px;
+    color: #75758b;
+}
 .compose {
     display: flex;
     flex-shrink: 0;
