--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -134,7 +134,7 @@ button:disabled {
 }
 
 /* Message Composition Styles */
-.typing {
+.typing-template {
     padding: 0 0 0 24px;
     color: #75758b;
 }
